<resources>
    <!-- Formatter -->
    <string name="fmt_double_EUR" translatable="false">%.2f €</string>
    <string name="fmt_members" translatable="false">%d Mitglieder</string>
    <string name="fmt_latest_update" translatable="false">Zuletzt aktualisiert: %s</string>
    <string name="fmt_number_of_groups">Du bist Mitglied in %d Gruppen</string>


    <!-- General -->
    <string name="app_name">Group Expenses</string>
    <string name="add_expense">Ausgabe hinzufügen</string>
    <string name="edit">Bearbeiten</string>
    <string name="stats">Statistik</string>
    <string name="invite">Leute einladen</string>
    <string name="settings">Einstellungen</string>
    <string name="statistics">Statistik</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="payments">Zahlungen</string>
    <string name="sign_out">Abmelden</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>


    <!-- Group -->
    <string name="fragment_user_groups">Gruppen</string>
    <string name="group_form_name">Gruppenname</string>
    <string name="group_name_not_empty">Gruppenname darf nicht leer sein</string>
    <string name="no_groups">Du hast noch keine Gruppen. Erstelle dir eine Gruppe oder trete einer Gruppe bei!</string>
    <string name="group_form_name_hint">Z.B. Kneipentour</string>
    <string name="jump_to_current_date">Zum aktuellen Datum springen</string>
    <string name="receipt_description">Beleg</string>
    <string name="receipt">Beleg</string>
    <string name="add_receipt">Beleg hinzufügen</string>
    <string name="name">Name</string>
    <string name="expenses_name">Name</string>
    <string name="costs">Kosten</string>
    <string name="expenses_date">Datum</string>
    <string name="currency_euro">€</string>
    <string name="interval">Intervall</string>
    <string name="confirm_delete_expense">Soll die Ausgabe wirklich gelöscht werden?</string>
    <string name="delete_expense">Ausgabe löschen</string>
    <string name="recurring">Wiederkehrend</string>
    <string name="expenses_hint">Die Kosten der Ausgabe in €</string>
    <string name="expenses_date_hint">Das Datum der Ausgabe</string>
    <string name="expenses_name_hint">Ausgabenname</string>
    <string name="expenses_date_button">Datum auswählen</string>
    <string name="group_no_expenses">In dieser Gruppe wurden noch keine Ausgaben getätigt.</string>
    <string name="user_no_payments">Du hast noch keine Zahlungen getätigt</string>
    <string name="group_no_payments">In dieser Gruppe wurden noch keine Zahlungen getätigt.</string>
    <string name="expense_name_missing">Ausgaben müssen einen Namen haben</string>
    <string name="expense_cost_missing">Kosten dürfen nicht leer sein</string>
    <string name="expense_cost_too_small">Kosten müssen größer als 0€ sein</string>
    <string name="group_invitation_link">Einladungslink</string>
    <string name="add_payment">Zahlung hinzufügen</string>
    <string name="payment">Zahlung</string>
    <string name="payment_hint">Der eingezahlte Betrag in €</string>
    <string name="payment_date_hint">Datum der Zahlung</string>
    <string name="button_add_payment">Zahlung verbuchen</string>
    <string name="payment_value_missing">Zahlung darf nicht leer sein</string>
    <string name="payment_value_too_small">Zahlung muss größer als 0€ sein</string>
    <string name="payment_save_error">Zahlung konnte nicht gespeichert werden</string>
    <string name="pick_image">Bild auswählen</string>
    <string name="pick">Erneut Auswählen</string>
    <string name="failed_to_upload_receipt">Fehler beim Hochladen des Belegs</string>
    <string name="payed_by">Bezahlt von</string>
    <string name="group_invitation">Gruppeneinladung</string>
    <string name="fmt_group_invitation">Möchten Sie folgender Gruppe beitreten?</string>
    <string name="accept">Annehmen</string>
    <string name="decline">Ablehnen</string>
    <string name="group_doesnt_exist">Gruppe existiert nicht!</string>
    <string name="admin">Admin</string>
    <string name="member">Mitglied</string>
    <string name="expense_remove_success">Ausgabe erfolgreich gelöscht!</string>
    <string name="expense_remove_failure">Beim Löschen der Ausgabe ist ein Fehler aufgetreten. Versuche es später erneut.</string>
    <string name="error_saving_expense">Ausgabe konnte nicht gespeichert werden</string>
    <string name="error_saving_group">Gruppe konnte nicht erstellt werden</string>
    <string name="total_expenses">Ausgaben gesamt:</string>
    <string name="personal_total_payments">Deine gesamten Einzahlungen:</string>
    <string name="personal_total_expenses">Deine gesamten Ausgaben:</string>
    <string name="no_group_memberships">Du gehörst keiner Gruppe an</string>
    <string name="send_payment_reminder">Zahlungserinnerung versenden</string>
    <string name="reminder_subject">Zahlungserinnerung</string>
    <string name="reminder_text_a">Hey,\nin deiner Gruppe"</string>
    <string name="reminder_text_b">"sind noch Zahlungen offen.</string>
    <string name="leave_group">Gruppe verlassen</string>
    <string name="kick_member">Mitglied entfernen</string>
    <string name="confirm_leave_descA">Bist du dir sicher, dass du diese Gruppe verlassen möchtest?</string>
    <string name="confirm_leave_descB">Bist du dir sicher, dass du diese Gruppe verlassen möchtest? Ohne eine Einladung kannst du ihr nicht erneut beitreten.</string>
    <string name="confirm_kick_desc1">"Bist du dir sicher, dass du "</string>
    <string name="confirm_kick_desc2">" aus dieser Gruppe entfernen möchtest?"</string>
    <string name="kicked_message">Ein Admin hat dich aus dieser Gruppe entfernt.</string>
    <string name="delete_payment">Zahlung löschen</string>
    <string name="confirm_delete_payment">Bist du dir sicher, dass du diese Zahlung löschen möchtest?</string>


    <!-- Stats -->
    <string name="personal_stats_groups">Gruppen:</string>
    <string name="single_member">1 Mitglied</string>
    <string name="total_payments">Einzahlungen gesamt:</string>
    <string name="group_number_of_members">Anzahl der Mitglieder:</string>
    <string name="group_total_balance">Gesamtbilanz:</string>
    <string name="payment_per_user">Zu zahlender Betrag pro Mitglied:</string>
    <string name="group_personal_balance">Persönliche Bilanz:</string>
    <string name="total_group_expenses">Gruppenausgaben gesamt:</string>
    <string name="total_group_payments">Gruppeneinzahlungen gesamt:</string>
    <string name="expenses">Ausgaben:</string>
    <string name="group_member_stats_payments">Einzahlungen:</string>
    <string name="group_stats_payments_per_user">Zu zahlender Betrag pro Person:</string>
    <string name="balance">Bilanz:</string>


    <!-- Achievements / Shamements -->
    <string name="no_achievements_or_shamements">Du hast bisher noch keine Achievements oder Shamements gesammelt.</string>
    <string name="achievements">Achievements und Shamements</string>
    <string name="achievements_title">Achievements / Shamements</string>
    <string name="achievements_text">Achievements</string>
    <string name="shamements_text">Shamements</string>
    <string name="achievement">Achievement</string>
    <string name="shamement">Shamement</string>

    <string name="achievement_expenses_1">Zahltag!</string>
    <string name="achievement_expenses_1_desc">Deine erste Ausgabe ist eingetragen</string>
    <string name="achievement_expenses_5">Ausgeber</string>
    <string name="achievement_expenses_5_desc">Du hast schon 5 Ausgaben für deine Gruppen getätigt</string>
    <string name="achievement_expenses_10">Vorstrecker</string>
    <string name="achievement_expenses_10_desc">Du hast schon 10 mal Geld vorgestreckt</string>
    <string name="achievement_expenses_50">Geldverleiher</string>
    <string name="achievement_expenses_50_desc">Unter deinem Namen stehen bereits 50 Ausgaben!</string>
    <string name="achievement_expenses_100">Bank</string>
    <string name="achievement_expenses_100_desc">Du hast 100 Ausgaben in deinen Gruppen getätigt! Du solltest vielleicht Bankier werden und Zinsen verlangen</string>

    <string name="achievement_payments_1">Take my money!</string>
    <string name="achievement_payments_1_desc">Du hast deine erste Zahlung getätigt!</string>
    <string name="achievement_payments_5">Schulden beglichen</string>
    <string name="achievement_payments_5_desc">Du hast schon 5 mal Geld eingezahlt!</string>
    <string name="achievement_payments_10">Du hast den Dreh raus</string>
    <string name="achievement_payments_10_desc">10 Zahlungen hast du bereits getätigt!</string>
    <string name="achievement_payments_50">Auf dich ist verlass!</string>
    <string name="achievement_payments_50_desc">Du hast insgesamt schon 50 Zahlungen getätigt!</string>
    <string name="achievement_payments_100">Gönnjamin!</string>
    <string name="achievement_payments_100_desc">100 Zahlungen! Du bist ein echter Gönnjamin</string>

    <string name="shamement_negative_balance_50">Positiv bleiben</string>
    <string name="shamement_negative_balance_50_desc">Dein Kontostand für deine Gruppen war schon einmal mehr als 50€ im Minus</string>
    <string name="shamement_negative_balance_100">100 Punkte?</string>
    <string name="shamement_negative_balance_100_desc">Dein Kontostand für deine Gruppen war schon einmal mehr als 100€ im Minus</string>
    <string name="shamement_negative_balance_250">Langsam wird\'s übel.</string>
    <string name="shamement_negative_balance_250_desc">Dein Kontostand für deine Gruppen war schon einmal mehr als 250€ im Minus</string>
    <string name="shamement_negative_balance_500">Kameradenschwein!</string>
    <string name="shamement_negative_balance_500_desc">Dein Kontostand für deine Gruppen war schon einmal mehr als 500€ im Minus. Ein Wunder, dass deine Gruppenmitglieder dich solche Beträge überziehen lassen…</string>
</resources>