<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecordsActivity">

    <item
        android:id="@+id/action_jump_to_current_date"
        android:icon="@drawable/ic_baseline_today_24"
        app:showAsAction="ifRoom"
        android:title="@string/jump_to_current_date"/>
    <item
        android:id="@+id/action_edit"
        app:showAsAction="never"
        android:title="@string/edit"/>
    <item
        android:id="@+id/action_stats"
        app:showAsAction="never"
        android:title="@string/stats"/>
    <item
        android:id="@+id/action_invite"
        app:showAsAction="never"
        android:title="@string/invite"/>

</menu>