<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_groups">

    <fragment
        android:id="@+id/navigation_groups"
        android:name="de.thm.ap.groupexpenses.ui.groups.GroupsFragment"
        android:label="@string/fragment_user_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navigation_payments"
        android:name="de.thm.ap.groupexpenses.ui.payments.UserPaymentsFragment"
        android:label="@string/payments"
        tools:layout="@layout/fragment_user_payments" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="de.thm.ap.groupexpenses.ui.statistics.UserStatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_user_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.thm.ap.groupexpenses.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>