<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="group"
            type="de.thm.ap.groupexpenses.model.Group" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/item_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="3dp"
        android:layout_margin="4dp"
        android:foreground="?selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{group.name}"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:text="Gruppenname"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="250dp"
                    android:text="@string/group_number_of_members"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{Integer.toString(group.numMembers)}"
                    tools:text="7" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="250dp"
                    android:text="@string/total_expenses"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{@string/fmt_double_EUR(group.totalExpenses)}"
                    tools:text="70.00 €" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="250dp"
                    android:text="@string/total_payments"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{@string/fmt_double_EUR(group.totalPayments)}"
                    tools:text="65.00 €" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="250dp"
                    android:text="@string/group_total_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@{group.getTotalBalance() &lt; 0 ?  @color/red : @color/grey}"
                    android:text="@{@string/fmt_double_EUR(group.getTotalBalance())}"
                    tools:text="-5.00 €" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="250dp"
                    android:text="@string/payment_per_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@{@string/fmt_double_EUR(group.getPaymentPerUser())}"
                    tools:text="250.00 €" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="250dp"
                    android:text="@string/group_personal_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@{group.getPersonalBalance() &lt; 0 ?  @color/red : @color/grey}"
                    android:text="@{@string/fmt_double_EUR(group.getPersonalBalance())}"
                    tools:text="-5.00 €" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
